# rust-reason-starter

./: README.md
api-rust/: Cargo.toml  Rocket.sample.toml
api-rust/src/: main.rs
web-bsb/: README.md  package.json
web-cra/: bsconfig.json  package.json
web-cra/src/: app.re  index.re
web-reason/src/: app.css
web/src/: Index.bs.js
