[package]
name = "api-rust"
version = "0.1.0"
authors = ["Wil Hunt <huntwj@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.1", features = ["mysql", "chrono"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_mysql_pool"]
